data/derived/fa15/progs/unify/prog3647.ml.out
Characters 44-53:
  else clone x n-1;;
       ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
